pingbuller - add some hovers, icons, img-logos and other styling

--- a/ping/index.html
+++ b/ping/index.html
@@ -16,7 +16,7 @@
       </a>
       <nav class="main-nav header-nav">
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a class="active" href="#">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Blog</a></li>
           <li><a href="#">Products</a></li>
@@ -45,17 +45,17 @@
         <div class="row wrapper-about">
           <article class="col-sm-4">
             <h3>ABOUT OUR COMPANY</h3>
-            <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus<span class="hidden-xs">ultrices posuere. Pellentesque vel lacus</span><span class="hidden-xs hidden-sm"> eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl. Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio. Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</span></p>
+            <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus<span class="hidden-xs">ultrices posuere. Pellentesque vel lacus</span><span class="hidden-xs hidden-sm"> eget nisi convallis auctor. Nam </span></p>
             <a href="#">READ MORE</a>
           </article>
           <article class="col-sm-4">
             <h3>ABOUT OUR COMPANY</h3>
-            <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus<span class="hidden-xs"> ultrices posuere. Pellentesque vel lacus</span><span class="hidden-xs hidden-sm">eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl. Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio. Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</span></p>
+            <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus<span class="hidden-xs">ultrices posuere. Pellentesque vel lacus</span><span class="hidden-xs hidden-sm"> eget nisi convallis auctor. Nam </span></p>
             <a href="#">READ MORE</a>
           </article>
-          <article class="col-sm-4">
+         <article class="col-sm-4">
             <h3>ABOUT OUR COMPANY</h3>
-            <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus<span class="hidden-xs"> ultrices posuere. Pellentesque vel lacus</span> <span class="hidden-xs hidden-sm">eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl. Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio. Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</span></p>
+            <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus<span class="hidden-xs">ultrices posuere. Pellentesque vel lacus</span><span class="hidden-xs hidden-sm"> eget nisi convallis auctor. Nam </span></p>
             <a href="#">READ MORE</a>
           </article>
         </div>
@@ -69,24 +69,27 @@
             <p>
               “Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae
                <span class="hidden-xs">lectus eu libero pellentesque pulvinar</span>
-              <span class="hidden-xs hidden-sm">urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.”
- Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio. Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
-              </span></p>
-          </div>
-
+              <span class="hidden-xs hidden-sm">urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.”</span></p>
+           </div>
           <div class="articles col-sm-6 col-sm-offset-1">
             <h2>RECENT UPDATES</h2>
             <article>
               <h4>Nunc turpis neque <span class="hidden-xs">feugiat eget</span></h4>
-              <p>Posted by Admin on March 13 <span class="hidden-xs">2012</span></p>
+              <p>Posted by Admin on March 13 <span class="hidden-xs">2012</span>
+              <span class="hidden-xs hidden-sm">in Recent News</span>
+              </p>
             </article>
             <article>
               <h4>Nunc turpis neque <span class="hidden-xs">feugiat eget</span></h4>
-              <p>Posted by Admin on March 13 <span class="hidden-xs">2012</span></p>
+              <p>Posted by Admin on March 13 <span class="hidden-xs">2012</span>
+              <span class="hidden-xs hidden-sm">in Category</span>
+              </p>
             </article>
             <article>
               <h4>Nunc turpis neque <span class="hidden-xs">feugiat eget</span></h4>
-              <p>Posted by Admin on March 13 <span class="hidden-xs">2012</span></p>
+              <p>Posted by Admin on March 13 <span class="hidden-xs">2012</span>
+              <span class="hidden-xs hidden-sm">in Blog Updates</span>
+              </p>
             </article>
             <a href="#">MORE BLOG POSTS</a>
           </div>
@@ -94,29 +97,29 @@
 
           <div class="logos">
             <ul>
-              <li>img</li>
-              <li>img</li>
-              <li>img</li>
-              <li>img</li>
-              <li>img</li>
-              <li>img</li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
+              <li></li>
             </ul>
           </div>
       </section>
 
-      <section class="categories">
+      <section class="categories hidden-xs">
         <div class="row wrapper-categories">
           <article class="col-sm-4">
             <h3>NEWS CATEGORIES</h3>
-            <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque <span class="hidden-xs hidden-sm">pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl. Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio. Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</span></p>
+            <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque <span class="hidden-xs hidden-sm">pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis</span></p> 
           </article>
           <article class="col-sm-4">
             <h3>NEWS CATEGORIES</h3>
-            <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque <span class="hidden-xs hidden-sm">pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl. Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio. Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</span></p>
+            <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque <span class="hidden-xs hidden-sm">pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis</span></p> 
           </article>
           <article class="col-sm-4">
             <h3>NEWS CATEGORIES</h3>
-            <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque <span class="hidden-xs hidden-sm">pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl. Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio. Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</span></p>
+            <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque <span class="hidden-xs hidden-sm">pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis</span></p> 
           </article>
         </div>
       </section>
@@ -124,7 +127,7 @@
 
   <footer class="container-fluid">
     <div class="wrapper-footer">
-    <nav class="main-nav footer-nav">
+    <nav class="main-nav footer-nav hidden-xs">
           <ul>
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
@@ -141,3 +144,12 @@
   </footer>
   </body>
 </html>
+
+<!--task for monday 
+
+  - bootstrap carousel for top 
+  
+  -button to top
+  
+  - 480px - looks awfull
+  -->
