--- a/ping/index.html
+++ b/ping/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="build/lib/normalize.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="lib/normalize.css">
+    <link rel="stylesheet" href="lib/bootstrap.min.css">
+    <link rel="stylesheet" href="lib/bootstrap-theme.min.css">
     <link rel="stylesheet" href="build/css/style.min.css">
     <title>Pingbuller</title>
   </head>
@@ -29,15 +30,60 @@
 
   <main class="container-fluid">
       <section class="slider">
-        <div class="wrapper-slider">
-          <div id="slider-top">
-          <div class="heading">
-            <h1>Lorem Ipsum Dolor</h1>
-            <h2>IT WILL MAKE ALL OF YOUR DREAMS COME</h2> 
-          </div>
-          <p class="text"></p>
-          <div class="img-container"></div>
-        </div>
+<!--the carousel begins!-->
+      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner wrapper-slider" role="listbox">
+    <div class="item active">
+      <div class="carousel-caption">
+        <h1>Lorem Ipsum Dolor</h1>
+        <h2>IT WILL MAKE ALL OF YOUR DREAMS COME</h2> 
+      <p class="text hidden-xs">Semper sollicitudin gravida eget, vestibulum sit amet sapien. Nunc dignissim tincidunt est, et auctor turpis ornare a. Nam venenatis hendrerit est </p>
+      </div>
+          <div class="img-container">
+    </div>
+    </div>
+
+    <div class="item">
+      <div class="carousel-caption">
+        <h1>Lorem Ipsum Dolor</h1>
+      <h2>IT WILL MAKE ALL OF YOUR DREAMS COME</h2> 
+      <p class="text hidden-xs">Semper sollicitudin gravida eget, vestibulum sit amet sapien. Nunc dignissim tincidunt est, et auctor turpis ornare a. Nam venenatis hendrerit est </p>
+      </div>
+          <div class="img-container">
+    </div>
+    <!--...-->
+  </div>
+
+      <div class="item">
+      <div class="carousel-caption">
+        <h1>Lorem Ipsum Dolor</h1>
+        <h2>IT WILL MAKE ALL OF YOUR DREAMS COME</h2> 
+      <p class="text hidden-xs">Semper sollicitudin gravida eget, vestibulum sit amet sapien. Nunc dignissim tincidunt est, et auctor turpis ornare a. Nam venenatis hendrerit est </p>
+      </div>
+          <div class="img-container">
+    </div>
+    </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+        <!--end of carousel -->
         </div>
       </section>
 
@@ -142,6 +188,10 @@
     </p>
     </div>
   </footer>
+
+  <script src="lib/jquery.min.js"></script>
+  <script src="lib/bootstrap.min.js"></script>
+  <!--<script src="src/js/carousel.js"></script>-->
   </body>
 </html>
 
