--- a/learnJS/fridgeOOP/index.html
+++ b/learnJS/fridgeOOP/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="container"></div>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <script src="newscript.js"></script>
   </body>
 </html>
