ping - add menu-pop-up without animation

--- a/ping/index.html
+++ b/ping/index.html
@@ -191,6 +191,7 @@
 
   <script src="lib/jquery.min.js"></script>
   <script src="lib/bootstrap.min.js"></script>
+  <script src="src/js/menu.js"></script>
   <!--<script src="src/js/carousel.js"></script>-->
   </body>
 </html>
