ping - fix 480px view, add stuff on 960px view, remain two tasks

--- a/ping/index.html
+++ b/ping/index.html
@@ -91,17 +91,17 @@
         <div class="row wrapper-about">
           <article class="col-sm-4">
             <h3>ABOUT OUR COMPANY</h3>
-            <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus<span class="hidden-xs">ultrices posuere. Pellentesque vel lacus</span><span class="hidden-xs hidden-sm"> eget nisi convallis auctor. Nam </span></p>
+            <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus<span class="hidden-xs visible-480">ultrices posuere. Pellentesque vel lacus</span><span class="hidden-xs hidden-sm visible-480"> eget nisi convallis auctor. Nam </span></p>
             <a href="#">READ MORE</a>
           </article>
           <article class="col-sm-4">
             <h3>ABOUT OUR COMPANY</h3>
-            <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus<span class="hidden-xs">ultrices posuere. Pellentesque vel lacus</span><span class="hidden-xs hidden-sm"> eget nisi convallis auctor. Nam </span></p>
+            <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus<span class="hidden-xs visible-480">ultrices posuere. Pellentesque vel lacus</span><span class="hidden-xs hidden-sm visible-480"> eget nisi convallis auctor. Nam </span></p>
             <a href="#">READ MORE</a>
           </article>
          <article class="col-sm-4">
             <h3>ABOUT OUR COMPANY</h3>
-            <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus<span class="hidden-xs">ultrices posuere. Pellentesque vel lacus</span><span class="hidden-xs hidden-sm"> eget nisi convallis auctor. Nam </span></p>
+            <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus<span class="hidden-xs visible-480">ultrices posuere. Pellentesque vel lacus</span><span class="hidden-xs hidden-sm visible-480"> eget nisi convallis auctor. Nam </span></p>
             <a href="#">READ MORE</a>
           </article>
         </div>
@@ -114,26 +114,26 @@
             <p class="title">starts here</p>
             <p>
               “Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae
-               <span class="hidden-xs">lectus eu libero pellentesque pulvinar</span>
-              <span class="hidden-xs hidden-sm">urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.”</span></p>
+               <span class="hidden-xs visible-480 ">lectus eu libero pellentesque pulvinar</span>
+              <span class="hidden-xs hidden-sm visible-480">urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.”</span></p>
            </div>
           <div class="articles col-sm-6 col-sm-offset-1">
             <h2>RECENT UPDATES</h2>
             <article>
-              <h4>Nunc turpis neque <span class="hidden-xs">feugiat eget</span></h4>
-              <p>Posted by Admin on March 13 <span class="hidden-xs">2012</span>
+              <h4>Nunc turpis neque <span class="hidden-xs visible-480">feugiat eget</span></h4>
+              <p>Posted by Admin on March 13 <span class="hidden-xs visible-480">2012</span>
               <span class="hidden-xs hidden-sm">in Recent News</span>
               </p>
             </article>
             <article>
-              <h4>Nunc turpis neque <span class="hidden-xs">feugiat eget</span></h4>
-              <p>Posted by Admin on March 13 <span class="hidden-xs">2012</span>
+              <h4>Nunc turpis neque <span class="hidden-xs visible-480">feugiat eget</span></h4>
+              <p>Posted by Admin on March 13 <span class="hidden-xs visible-480">2012</span>
               <span class="hidden-xs hidden-sm">in Category</span>
               </p>
             </article>
             <article>
-              <h4>Nunc turpis neque <span class="hidden-xs">feugiat eget</span></h4>
-              <p>Posted by Admin on March 13 <span class="hidden-xs">2012</span>
+              <h4>Nunc turpis neque <span class="hidden-xs visible-480">feugiat eget</span></h4>
+              <p>Posted by Admin on March 13 <span class="hidden-xs visible-480">2012</span>
               <span class="hidden-xs hidden-sm">in Blog Updates</span>
               </p>
             </article>
@@ -153,19 +153,24 @@
           </div>
       </section>
 
-      <section class="categories hidden-xs">
+      <section class="categories hidden-xs visible-480-block">
         <div class="row wrapper-categories">
-          <article class="col-sm-4">
+          <article class="col-sm-4 hidden-upper-960">
             <h3>NEWS CATEGORIES</h3>
             <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque <span class="hidden-xs hidden-sm">pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis</span></p> 
           </article>
-          <article class="col-sm-4">
-            <h3>NEWS CATEGORIES</h3>
-            <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque <span class="hidden-xs hidden-sm">pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis</span></p> 
+          <article class="col-sm-4  hidden-below-960">
+            <img src="img/logo-bw.png">
+            <p class="copy">Copyright 2013, Pingbull AS</p>
+            <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pul</p>
           </article>
           <article class="col-sm-4">
             <h3>NEWS CATEGORIES</h3>
-            <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque <span class="hidden-xs hidden-sm">pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis</span></p> 
+            <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque <span class="hidden-xs hidden-sm visible-960">pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis</span></p> 
+          </article>
+          <article class="col-sm-4">
+            <h3>NEWS CATEGORIES</h3>
+            <p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque <span class="hidden-xs hidden-sm visible-960">pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis</span></p> 
           </article>
         </div>
       </section>
@@ -196,11 +201,8 @@
   </body>
 </html>
 
-<!--task for monday 
+<!--tasks
 
-  - bootstrap carousel for top 
-  
-  -button to top
-  
-  - 480px - looks awfull
+  - bootstrap carousel for review
+  - button to top
   -->
