--- a/ping/index.html
+++ b/ping/index.html
@@ -194,10 +194,14 @@
     </div>
   </footer>
 
+  <button type="button" class="to-top">
+   <svg enable-background="new 0 0 32 32"  version="1.1" viewBox="0 -3 32 32"  xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path calss="arrow" clip-rule="evenodd" d="M21.698,15.286l-9.002-8.999  c-0.395-0.394-1.035-0.394-1.431,0c-0.395,0.394-0.395,1.034,0,1.428L19.553,16l-8.287,8.285c-0.395,0.394-0.395,1.034,0,1.429  c0.395,0.394,1.036,0.394,1.431,0l9.002-8.999C22.088,16.325,22.088,15.675,21.698,15.286z" fill="#121313" fill-rule="evenodd"/><g/><g/><g/><g/><g/><g/></svg>
+  </button>
+
   <script src="lib/jquery.min.js"></script>
   <script src="lib/bootstrap.min.js"></script>
   <script src="src/js/menu.js"></script>
-  <!--<script src="src/js/carousel.js"></script>-->
+  <script src="src/js/topbutton.js"></script>
   </body>
 </html>
 
