pingbuller - all js works awfull, have too many troubles

--- a/ping/index.html
+++ b/ping/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon"  type="image/png" href="img/favicon.png">
     <link rel="stylesheet" href="lib/normalize.css">
     <link rel="stylesheet" href="lib/bootstrap.min.css">
     <link rel="stylesheet" href="lib/bootstrap-theme.min.css">
     <link rel="stylesheet" href="build/css/style.min.css">
     <title>Pingbuller</title>
   </head>
-  <body>
+  <body class="parallax-window" data-parallax="scroll"
+        data-image-src="img/body-bg.jpg">
   <header class="container-fluid">
     <div class="wrapper-header">
       <a class="logo" href="#">logotype
@@ -200,8 +202,10 @@
 
   <script src="lib/jquery.min.js"></script>
   <script src="lib/bootstrap.min.js"></script>
+  <script src="lib/parallax.min.js"></script>
   <script src="src/js/menu.js"></script>
   <script src="src/js/topbutton.js"></script>
+  <script src="src/js/parallax.js"></script>
   </body>
 </html>
 
