--- a/ping/index.html
+++ b/ping/index.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="build/css/style.min.css">
     <title>Pingbuller</title>
   </head>
-  <body class="parallax-window" data-parallax="scroll"
-        data-image-src="img/body-bg.jpg">
+  <body data-paroller-factor="0.5" 
+        data-paroller-type="background"
+        data-paroller-direction="vertical">
   <header class="container-fluid">
     <div class="wrapper-header">
       <a class="logo" href="#">logotype
@@ -197,20 +198,12 @@
   </footer>
 
   <button type="button" class="to-top">
-   <svg enable-background="new 0 0 32 32"  version="1.1" viewBox="0 -3 32 32"  xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path calss="arrow" clip-rule="evenodd" d="M21.698,15.286l-9.002-8.999  c-0.395-0.394-1.035-0.394-1.431,0c-0.395,0.394-0.395,1.034,0,1.428L19.553,16l-8.287,8.285c-0.395,0.394-0.395,1.034,0,1.429  c0.395,0.394,1.036,0.394,1.431,0l9.002-8.999C22.088,16.325,22.088,15.675,21.698,15.286z" fill="#121313" fill-rule="evenodd"/><g/><g/><g/><g/><g/><g/></svg>
+    <span class="glyphicon glyphicon-chevron-up"></span>
   </button>
 
-  <script src="lib/jquery.min.js"></script>
-  <script src="lib/bootstrap.min.js"></script>
-  <script src="lib/parallax.min.js"></script>
-  <script src="src/js/menu.js"></script>
-  <script src="src/js/topbutton.js"></script>
-  <script src="src/js/parallax.js"></script>
+    <script src="lib/jquery.min.js"></script>
+    <script src="lib/bootstrap.min.js"></script>
+    <script src="lib/jquery.paroller.min.js"></script>
+    <script src="build/js/build.min.js"></script>
   </body>
 </html>
-
-<!--tasks
-
-  - bootstrap carousel for review
-  - button to top
-  -->
