sedona - add page-header and welcome-screen for 320px

--- a/sedona/index.html
+++ b/sedona/index.html
@@ -13,8 +13,9 @@
     <header class="page-header">
         <div class="page-header__inner">
             <div class="page-header__logo-wrapper">
-                <img src="" alt="sedona logotype">
+                <img src="img\logo-320.png" alt="sedona logotype">
             </div>
+            <button class="main-nav__hamb">toggle-button</button>
             <div class="page-header__nav-wrapper">
                 <nav class="main-nav">
                     <ul class="main-nav__list">
@@ -23,8 +24,6 @@
                         <li><a class="main-nav__list-item" href="#">Фото и видео</a></li>
                         <li><a class="main-nav__list-item" href="#">Гостиницы</a></li>
                     </ul>
-                    <button class="main-nav__hamb">
-                    </button>
                 </nav>
             </div>
         </div>  
@@ -32,10 +31,10 @@
       
     <section class="welcome-screen">
         <div class="welcome-screen__inner">
-            <div class="welcome-screen__landscape">
-                <img src="" alt="welcome to the gorgeous">
-                <img src="" alt="sedona">
-                <img src="" alt="some reason">
+            <div class="welcome-screen__wrapper">
+                <img src="img\welcome-320.png" alt="welcome to the gorgeous">
+                <img src="img\sedona-320.png" alt="sedona">
+                <img src="img\reason-320.png" alt="some reason">
             </div>
             <h1 class="welcome-screen__header">
                 СЕДОНА — небольшой городок в АРИЗОНЕ,<br>
