sedona - add some styling to content and new files

--- a/sedona/index.html
+++ b/sedona/index.html
@@ -49,44 +49,50 @@
     <main class="page-content">
 
         <section class="city-content">
-            <div class="city-content__descr">
-                <header class="city-content__header">
-                    <h2>
-                        НАСТОЯЩИЙ ГОРОДОК
-                    </h2>
-                </header>
-                <div class="city-content__subheader">цифра 1</div>
-                <div class="city-content__text">СЕДОНА НЕ АТРАКЦИОН ДЛЯ ТУРИСТОВ,ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</div>
+            <div class="city-content__inner">
+                <div class="city-content__descr">
+                    <header class="city-content__header">
+                        <h2>
+                            НАСТОЯЩИЙ ГОРОДОК
+                        </h2>
+                    </header>
+                    <div class="city-content__subheader">цифра 1</div>
+                    <div class="city-content__text">СЕДОНА НЕ АТРАКЦИОН ДЛЯ ТУРИСТОВ,ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</div>
+                </div>
             </div>
-            <div class="city-content__landscape">здесь будет фон</div>
+                <div class="city-content__landscape">здесь будет фон</div>
         </section>
         
         <section class="tourism-essentials">
-            <ul class="tourism-essentials__list">
-                <li class="tourism-essentials__list-item">
-                    <h3>Жилье</h3>
-                    <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
-                </li>
-                <li class="tourism-essentials__list-item">
-                    <h3>Сувениры</h3>
-                    <p>Всегда заказывай ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!</p>
-                </li>
-                <li class="tourism-essentials__list-item">
-                    <h3>Еда</h3>
-                    <p>Не только китайского, но и местного производства!</p>
-                </li>
-            </ul>
+            <div class="tourism-essentials__inner">
+                <ul class="tourism-essentials__list">
+                    <li class="tourism-essentials__list-item">
+                        <h3>Жилье</h3>
+                        <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+                    </li>
+                    <li class="tourism-essentials__list-item">
+                        <h3>Сувениры</h3>
+                        <p>Всегда заказывай ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!</p>
+                    </li>
+                    <li class="tourism-essentials__list-item">
+                        <h3>Еда</h3>
+                        <p>Не только китайского, но и местного производства!</p>
+                    </li>
+                </ul>
+            </div>
         </section>
         
         <section class="bridge-content">
-            <div class="bridge-content__descr">
-                <header class="bridge-content__header">
-                    <h2>
-                        ТАМ ЕСТЬ Мост дьявола
-                    </h2>
-                </header>
-                <div class="bridge-content__subheader">цифра 2</div>
-                <div class="bridge-content__text">Да, по нему можно пройти! Если конечно вы осмелитесь</div>
+            <div class="bridge-content__inner">
+                <div class="bridge-content__descr">
+                    <header class="bridge-content__header">
+                        <h2>
+                            ТАМ ЕСТЬ Мост дьявола
+                        </h2>
+                    </header>
+                    <div class="bridge-content__subheader">цифра 2</div>
+                    <div class="bridge-content__text">Да, по нему можно пройти! Если конечно вы осмелитесь</div>
+                </div>
             </div>
             <div class="bridge-content__landscape">здесь будет фон</div>
         </section>
