--- a/sedona/index.html
+++ b/sedona/index.html
@@ -315,7 +315,7 @@
                         </h2>
                     </header>
                     <div class="city-content__subheader">- №1 -</div>
-                    <div class="city-content__text">СЕДОНА НЕ АТРАКЦИОН ДЛЯ ТУРИСТОВ,ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</div>
+                    <p class="city-content__text">СЕДОНА НЕ АТРАКЦИОН ДЛЯ ТУРИСТОВ,ТАМ ТЕЧЕТ СВОЯ ЖИЗНЬ</p>
                 </div>
             </div>
                 <div class="city-content__landscape"></div>
@@ -325,16 +325,56 @@
             <div class="tourism-essentials__inner">
                 <ul class="tourism-essentials__list">
                     <li class="tourism-essentials__list-item">
+                        <div class="tourism-essentials__list-item-icon">
+                            <svg version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 width="74.696px" height="72.345px" viewBox="0 0 74.696 72.345" enable-background="new 0 0 74.696 72.345" xml:space="preserve">
+<g>
+	<path d="M29.503,43.845v0.5v18.062v1.469v1.469h16v-2v-0.938V44.345v-0.5v-2.438h-16V43.845z M42.566,62.407H32.441V44.345h10.125
+		V62.407z"/>
+	<path d="M72.62,39.44l2.076-2.078l-9.908-9.913V0.47h-0.941H61.85h-7.938v0h-2.938v13.162L37.349,0L0,37.363l2.077,2.078
+		l7.832-7.832v37.799H5.971v2.938h63.875v-2.938h-5.059V31.608L72.62,39.44z M53.913,3.408h7.938v21.104l-7.938-7.94V3.408z
+		 M61.85,69.407H12.846V28.671L37.348,4.169L61.85,28.671V69.407z"/>
+	<path d="M29.753,27.21c0,4.28,3.47,7.75,7.75,7.75s7.75-3.47,7.75-7.75s-3.47-7.75-7.75-7.75S29.753,22.93,29.753,27.21z
+		 M37.503,22.241c2.745,0,4.97,2.225,4.97,4.97s-2.225,4.97-4.97,4.97c-2.745,0-4.97-2.225-4.97-4.97S34.759,22.241,37.503,22.241z"
+		/>
+	<rect x="16.909" y="41.407" width="3" height="3.938"/>
+	<rect x="22.846" y="41.407" width="3" height="3.938"/>
+	<rect x="16.909" y="47.407" width="3" height="3.938"/>
+	<rect x="22.846" y="47.407" width="3" height="3.938"/>
+	<rect x="48.846" y="41.407" width="3" height="3.938"/>
+	<rect x="54.784" y="41.407" width="3" height="3.938"/>
+	<rect x="48.846" y="47.407" width="3" height="3.938"/>
+	<rect x="54.784" y="47.407" width="3" height="3.938"/>
+</g>
+</svg>
+                        </div>
                         <h3>Жилье</h3>
                         <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
                     </li>
                     <li class="tourism-essentials__list-item">
+                        <div class="tourism-essentials__list-item-icon">
+                            <svg version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 width="63px" height="75.084px" viewBox="0 0 63 75.084" enable-background="new 0 0 63 75.084" xml:space="preserve">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M60.165,22.23h-0.103H35.758c13.603-6.815,14.688-11.115,14.188-13.52
+	c-1.145-3.916-5.605-6.938-9.849-5.341c-5.484,2.063-7.028,10.262-8.513,16.19c-1.894-5.998-3.726-13.649-8.011-17.525
+	c-1.242-1.125-3.049-2.237-5.676-2.003c-3.965,0.352-9.652,5.317-7.344,10.849c2.217,5.313,9.539,8.67,14.354,11.35H3.104h-0.27
+	C1.275,22.23,0,23.506,0,25.065V36.25c0,1.559,1.275,2.834,2.835,2.834h0.27v33.062v2.405v0.532h56.958v-0.532v-2.405V39.084h0.103
+	c1.56,0,2.835-1.275,2.835-2.834V25.065C63,23.506,61.725,22.23,60.165,22.23z M41.766,5.873c2.07-0.306,4.907,1.283,5.175,3.171
+	c0.386,2.723-3.348,5.192-5.008,6.343c-2.484,1.723-4.852,2.611-7.177,4.006C35.628,15.748,37.267,6.539,41.766,5.873z
+	 M19.232,15.721c-2.19-1.467-6.444-4.378-6.342-7.678c0.11-3.552,5.655-6.491,8.68-3.839c3.797,3.331,5.625,10.972,7.01,16.357
+	C25.381,19.042,22.35,17.808,19.232,15.721z M25.114,72.147H6.042V39.084h19.072V72.147z M25.114,36.084H3V25.23h22.114V36.084z
+	 M35.115,36.084v3v33.062h-7.063V39.084v-3V25.23h7.063V36.084z M57.125,72.147H38.053V39.084h19.072V72.147z M60,36.084H38.053
+	V25.23H60V36.084z"/>
+</svg>
+                        </div>
                         <h3>Сувениры</h3>
-                        <p>Всегда заказывай ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!</p>
+                        <p>Не только китайского, но и местного производства!</p>
                     </li>
                     <li class="tourism-essentials__list-item">
+                        <div class="tourism-essentials__list-item-icon">
+                        </div>
                         <h3>Еда</h3>
-                        <p>Не только китайского, но и местного производства!</p>
+                        <p>Всегда заказывай ФИРМЕННЫЙ БУРГЕР, Вы НЕ разочаруетесь!</p>
                     </li>
                 </ul>
             </div>
@@ -380,7 +420,7 @@
         <div class="hotel-search__inner">
             <header class="hotel-search__header">
                 <h2>ЗАИНТЕРЕСОВАЛИСЬ?</h2>
-                <div>Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в седоне</div>
+                <p>Укажите предполагаемые даты поездки и мы покажем вам лучшие предложения гостиниц в седоне</p>
             </header>
         </div>
         <div class="search-form__wrapper">
@@ -432,3 +472,14 @@
       
   </body>
 </html>
+
+<!--
+tasks
+1. open icon-burg with illustrator - resave 
+2. style form 
+3. wtf with fonts? 
+- check out variables fonts on 768 to resize auto
+4. menu on 320 with toggle button - just styles
+5. menu on 768 
+6. change photos from design (x1 for 320, x2 for 768)
+-->
