--- a/cf-maker/index.html
+++ b/cf-maker/index.html
@@ -42,19 +42,19 @@
               <p class="programs__sub-header">We share their experience and professional barista championships multiple winners</p>
 <!-- mb markup for tabs will change,
     example from jQ UI-->
-              <div id="tabs">
-                  <ul>
-                    <li><a href="#tabs-1">Nunc tincidunt</a></li>
-                    <li><a href="#tabs-2">Proin dolor</a></li>
-                    <li><a href="#tabs-3">Aenean lacinia</a></li>
+              <div class="tabs js-tab__wrapper">
+                  <ul class="js-tabs__list">
+                    <li><a class="js-tabs__list-item js-tabs__list-item_active">Nunc tincidunt</a></li>
+                    <li><a class="js-tabs__list-item">Proin dolor</a></li>
+                    <li><a class="js-tabs__list-item">Aenean lacinia</a></li>
                   </ul>
-                  <div id="tabs-1">
+                  <div class="js-tabs__content js-hidden">
                     <p>Proin elit arcu, rutrum commodo, vehicula tempus, commodo a, risus. Curabitur nec arcu. Donec sollicitudin mi sit amet mauris. Nam elementum quam ullamcorper ante.</p>
                   </div>
-                  <div id="tabs-2">
+                  <div class="js-tabs__content js-hidden">
                     <p>Morbi tincidunt, dui sit amet facilisis feugiat, odio metus gravida ante, ut pharetra massa metus id nunc. Duis scelerisque molestie turpis. Sed fringilla, massa eget luctus malesuada, metus eros molestie lectus, ut tempus eros massa ut dolor.</p>
                   </div>
-                  <div id="tabs-3">
+                  <div class="js-tabs__content js-hidden">
                     <p>Mauris eleifend est et turpis. Duis id erat. Suspendisse potenti. Aliquam vulputate, pede vel vehicula accumsan, mi neque rutrum erat, eu congue orci lorem eget lorem. Vestibulum non ante.</p>
                   </div>
                 </div>
@@ -169,5 +169,7 @@ types of roasting</h3>
           <a class="page-footer__designer" href="#">NIKANDROV.PRO</a>
       </div>
   </footer>
+      
+      <script src="src/js/tabs.js"></script>
   </body>
 </html>
