cf-maker - some experiments with stars

--- a/cf-maker/index.html
+++ b/cf-maker/index.html
@@ -28,14 +28,20 @@
           <a class="page-header__phone-number" href="tel:+38 (099) 123 45 67">+38 (099) 12-34-567</a>
       </div>
       </header>
+      
       <section class="welcome-screen">
-          <div class="welcome-screen__stars">star star star</div>
+          <div class="welcome-screen__stars-wrapper">
+              <div class="welcome-screen__star">star</div>
+              <div class="welcome-screen__star">star</div>
+              <div class="welcome-screen__star">star</div>
+            </div>
           <p class="welcome-screen__sup-heading">Intensive program barista training</p>
           <h1 class="welcome-screen__heading">barista training in <span>amsterdam</span></h1>
           <p class="welcome-screen__sub-heading">On the basis of the company's largest coffee roasters</p>
           <div class="welcome-screen__circle">circle</div>
           <a class="welcome-screen__arrow" href="#">arrow down</a>
       </section>
+      
       <section class="programs">
           <div class="programs__inner">
               <h2 class="programs__header">programs</h2>
