cf-maker - finish 768px

--- a/cf-maker/index.html
+++ b/cf-maker/index.html
@@ -381,7 +381,7 @@ Latte Art - Features practice and the importance of Latte Art in business and th
                   You yourself are testing the taste benefits of each method
 and select the type of cooking yourself
               </p>
-              <div class="slider" data-slider>
+              <div class="slider gallery__slider-wrapper" data-slider>
                 <div class="slides">
                     <div><img src="img/slider__img1.jpg"></div>
                     <div><img src="img/slider__img2.jpg"></div>
