--- a/cf-maker/index.html
+++ b/cf-maker/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon"  type="image/png" href="img/favicon.png">
     <link rel="stylesheet" href="lib/normalize.css">
     <link rel="stylesheet" href="build/css/style.min.css">
-    <title></title>
+    <title>coffee maker</title>
   </head>
   <body>
       <div class="first-screen-wrapper">
