hw19-20 done and clean bem-tools-dir

--- a/hw19-20/index.html
+++ b/hw19-20/index.html
@@ -5,7 +5,9 @@
     <title></title>
   </head>
   <body>
-    <div id="container"></div>
+    <div id="container">
+      все в скрипте)
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
