sedona - fix some baugs, add nav.js and babel

--- a/sedona/index.html
+++ b/sedona/index.html
@@ -495,20 +495,26 @@
         </div>
     </section>
       
+<!--      <script src='src/js/main-nav.js'></script>-->
+      <script src="src/tmp/main-nav.js"></script>
   </body>
 </html>
 
 <!--
 tasks
-1. open icon-burg with illustrator - resave 
-2. style form 768
-3. wtf with fonts? 
+1. menu on 768
+2. wtf with fonts? 
 - check out variables fonts on 768 to resize auto
-+4. menu on 320 with toggle button - just styles
-+5. menu on 768 
-6. check 1200 
+
+3. check 1024
+- main-content - made section bigger
+4. chekc 1200
+
 7. decorative white triangles 
 - pseudo-elements after/before with position: absolute? 
+
+8.svg-sprites and calendar with hover in search-form
+9. выровнять транзишн анимации в открывании меню 
 
 - js 
 1. change photos from design (x1 for 320, x2 for 768)
