done hw21 without tests

--- a/hw21/index.html
+++ b/hw21/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <div id="container"></div>
-    <script src="tmp/script.js"></script>
+    <!-- <script src="tmp/script.js"></script> -->
+    <script src="tmp/tmpl.js"></script>
   </body>
 </html>
