port - add some contetn-images, real content-text to blocks, fix some bugs with 768px-resolution

--- a/port/index.html
+++ b/port/index.html
@@ -44,16 +44,20 @@
           <section class="nakitel">
               <div class="nakitel__inner">
                   <h2 class="nakitel__header">Nakitel project</h2>
-                  <p class="nakitel__text">some text about project</p>
-                  <a class="nakitel__button" href="#">Open</a>
+                  <p class="nakitel__text">This projecy was one of <br>my first test-task for job-appling. <br>Stack - jQuery, Gulp,<br> Desktop-first with apadtive.</p>
+                  <a class="nakitel__button" href="https://yenobi.github.io/nakitelTest/index.html"  target="_blank">Open</a>
+                  <img class="nakitel__content-img" src="img/nakitel-mini.png" alt="door from nakitel project">
               </div>
           </section>
 
            <section class="pingbuller">
               <div class="pingbuller__inner">
                   <h2 class="pingbuller__header">Pingbuller project</h2>
-                  <p class="pingbuller__text">some text about project</p>
-                  <a class="pingbuller__button" href="#">Open</a>
+                  <p class="pingbuller__text">During this poroject study<br> Bootstrap-framework, <br>Less-prepoccessor,<br>
+                    Webmanifest for PWA and <br>Bower as package manager.
+                  </p>
+                  <a class="pingbuller__button" href="https://yenobi.github.io/ping/index.html"  target="_blank">Open</a>
+                  <img class="pingbuller__content-img" src="img/ping-mini.png" alt="mountains related to pingbuller-project">
               </div>
           </section>
       </div>
