sedona - add decorative triangles and manifest

--- a/sedona/index.html
+++ b/sedona/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="Sedona" content="Sedona-web-app">
+    <link rel="manifest" href="manifest.json">
+    <link rel="icon" sizes="16x16 32x32 48x48" type="image/png" href="img/icons/android-icon-32x32.png">
     <link rel="stylesheet" href="lib/normalize.css">
 <!--    <link rel="stylesheet" href="fonts/fonts.css">-->
     <link rel="stylesheet" href="build/css/style.min.css">
@@ -504,9 +507,6 @@ tasks
 
 1. wtf with fonts? 
 - check out variables fonts on 768 to resize auto
-
-2. decorative white triangles 
-- pseudo-elements after/before with position: absolute? 
 
 3.svg-sprites and calendar with hover in search-form
 
